--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "node": "^20.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -36,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "postcss-import": "^15.1.0",
+    "sass": "^1.66.0",
     "tailwindcss": "^3.3.3"
   }
 }
